Fixed image stretching on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 body {
-  position: reletive;
+  position: relative;
 }
 
 #background {
@@ -49,7 +49,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
-  height: 350px;
+  height: auto;
   width: 350px;
   border-style: solid;
   border-width: 5px;
@@ -117,7 +117,14 @@ h2 {
   -ms-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
 }
+
+#profile {
+    width: 100%;
+    height: auto;
+  }
 }
+
+
 
 .header {
   font-size: 55px;
